--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@zip.js/zip.js": "^2.3.17",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
